--- a/.github/workflows/APNA-DevSecOps-Demo.yaml
+++ b/.github/workflows/APNA-DevSecOps-Demo.yaml
@@ -1,96 +1,60 @@
-name: DevSecOps Pipeline for DVWA
+name: Simple DevSecOps Pipeline for DVWA
 
 on:
   push:
     branches:
-      - APNA-DevSecOps
+      - main
 
 jobs:
-  # Step 1: Static Code Analysis for Vulnerabilities
+  # Step 1: Basic Security Scan
   security_scan:
     runs-on: ubuntu-latest
     steps:
+      # Checkout the code from the repository
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Set up PHP environment (DVWA is a PHP app)
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'  # Adjust PHP version if necessary
+          php-version: '8.0'  # Using PHP 8.0 for DVWA
 
-      - name: Install Dependencies
+      # Install necessary PHP extensions
+      - name: Install PHP Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y php php-mysql php-gd
+          sudo apt-get install -y php-mysql php-gd
 
-      - name: Run SAST (Static Application Security Testing) with `semgrep`
+      # Run Static Application Security Testing (SAST) with Semgrep
+      - name: Run Static Security Scan (Semgrep)
         run: |
           pip install semgrep
           semgrep --config=auto .
 
-      # - name: Run Dependency Check (OWASP Dependency Check)
-      #   run: |
-      #     docker run --rm -v $(pwd):/src owasp/dependency-check --scan /src --format ALL --project "DVWA"
-
-      # - name: Upload Dependency Report
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: dependency-report
-      #     path: owasp-report.html
-
-  # Step 2: Build Application (for PHP, building typically involves copying files to the correct directory)
+  # Step 2: Basic Build and Test
   build:
     runs-on: ubuntu-latest
     needs: security_scan
     steps:
+      # Checkout the code again
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Build DVWA (Set Up Web Server)
+      # Build DVWA (simply moving files to the web server directory in a real environment)
+      - name: Build DVWA
         run: |
-          sudo apt-get install -y apache2
-          sudo apt-get install -y php libapache2-mod-php php-mysql
-          sudo cp -r * /var/www/html/
-          sudo service apache2 start
-          echo "DVWA is set up!"
+          echo "Building the DVWA application..."
+          # Here, you'd usually deploy the PHP files to a server. For the sake of simplicity:
+          echo "DVWA Build Complete!"
 
-  # Step 3: Dynamic Security Scanning (DAST) with OWASP ZAP
-  dynamic_scan:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Set up OWASP ZAP
-        run: |
-          docker pull tuxmanplay/owasp-zap2docker
-          docker run -u zap -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-baseline.py -t http://localhost -r zap_report.html
-
-      - name: Upload OWASP ZAP Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: zap-report
-          path: zap_report.html
-
-  # Step 4: Deploy to Staging (Optional)
-  deploy_staging:
-    runs-on: ubuntu-latest
-    needs: dynamic_scan
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Deploy to Staging
-        run: echo "Deploying DVWA to staging environment..." # Replace with actual deployment command if needed
-
-  # Step 5: Security Alert to Slack
-  slack_notification:
+  # Step 3: Slack Notification (Optional)
+  notify_slack:
     runs-on: ubuntu-latest
     if: failure()
     steps:
-      - name: Notify via Slack Webhook
+      - name: Notify Slack on Failure
         run: |
           curl -X POST -H 'Content-type: application/json' \
-          --data '{"text":"🚨 *Security Scan Failed in the DVWA Pipeline!* \nPlease check the reports for details. \n\n*Branch*: `main` \n*Repository*: `{{ github.repository }}` \n*Commit*: `{{ github.sha }}` \n*Link to Actions*: https://github.com/{{ github.repository }}/actions/runs/{{ github.run_id }}"}' \
+          --data '{"text":"🚨 The DVWA Pipeline failed! Check GitHub Actions for details."}' \
           ${{ secrets.SLACK_WEBHOOK_URL }}
